--- a/app.sync-conflict-20220831-073255-ILODQNF.json
+++ b/app.sync-conflict-20220831-073255-ILODQNF.json
@@ -2,7 +2,7 @@
   "tables": [
     {
       "id": "1",
-      "status": "Free",
+      "status": "Busy",
       "people": "1",
       "maxPeople": "4",
       "bill": "0"
